[project]
name = "pdf-to-md"
version = "1.0.0"
description = "Convert text-based PDFs (e.g. resumes) to well-formatted Markdown using Claude AI"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "anthropic>=0.40",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = []